<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="name">Name: </string>
    <string name="name_hint">Enter your full name</string>
    <string name="phone">Phone: </string>
    <string name="phone_hint">Enter your phone number</string>
    <string name="size">Size: </string>
    <string name="size_hint">Enter number of people</string>
    <string name="smoking">Smoking Area</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>

</resources>